# bioml

./: README.md  pyproject.toml
bioml/: __init__.py  utils.py
bioml/classifiers/: knn.py  nn.py  svm.py  xgb.py
bioml/plotting/: __init__.py  feature_importance.py  importance.py  plots.py  roc.py
bioml/utils/: __init__.py  config.py  io.py  preprocessing.py  run_context.py  run_dir.py  run_manager.py  runs.py
configs/: default.yaml  knn.yaml  nn.yaml  svm.yaml  xgb.yaml
tests/: test_plotting.py  test_preprocessing.py  test_roc.py
